# internal/domain/entity/user.go
@@ -6,6 +6,6 @@ type User struct {
 	ID        int64
 	Username  string
 	Email     string
-	Password  string
+	Password  []byte
 	CreatedAt time.Time
 }
