# internal/infrastructure/persistences/postgres/user_repo.go
@@ -11,6 +11,7 @@ import (
 	"github.com/gamee1910/social/internal/domain/entity"
 	"github.com/gamee1910/social/internal/domain/repository"
 	"github.com/gamee1910/social/pkg/logger"
+	"github.com/lib/pq"
 )
 
 type userRepository struct {
@@ -28,25 +29,12 @@ func NewUserRepository(
 	}
 }
 
-func (repository *userRepository) Create(
-	ctx context.Context,
-	user *entity.User,
-) (*entity.User, error) {
+func (repository *userRepository) Create(ctx context.Context, user *entity.User) (*entity.User, error) {
 
 	ctx, cancel := context.WithTimeout(ctx, config.QueryTimeoutDuration)
 	defer cancel()
 
-	repository.logger.Info(
-		"Creating user",
-		"username", user.Username,
-		"email", user.Email,
-	)
-
-	query := `
-	INSERT INTO users(username, email, password)
-	VALUES ($1, $2, $3)
-	RETURNING id, username, email, created_at
-	`
+	query := "INSERT INTO users(username, email, password) VALUES ($1, $2, $3) RETURNING id, username, email, created_at"
 
 	var result entity.User
 
@@ -64,40 +52,32 @@ func (repository *userRepository) Create(
 	)
 
 	if err != nil {
-		repository.logger.Error(
-			"Failed to create user",
-			"username", user.Username,
-			"email", user.Email,
-			"error", err,
-		)
+		var pqErr *pq.Error
+
+		if errors.As(err, &pqErr) {
+			if pqErr.Code == "23505" {
+				switch pqErr.Constraint {
+				case "users_username_key":
+					return nil, domain.ErrUsernameAlreadyExists
+
+				case "users_email_key":
+					return nil, domain.ErrEmailAlreadyExists
+				}
+			}
+		}
 
 		return nil, err
 	}
 
-	repository.logger.Info(
-		"Successfully created user",
-		"userID", result.ID,
-		"username", result.Username,
-		"email", result.Email,
-	)
-
 	return &result, nil
 }
 
-func (repository *userRepository) GetById(
-	ctx context.Context,
-	userID int64,
-) (*entity.User, error) {
+func (repository *userRepository) GetById(ctx context.Context, userID int64) (*entity.User, error) {
 
 	ctx, cancel := context.WithTimeout(ctx, config.QueryTimeoutDuration)
 	defer cancel()
 
-	repository.logger.Info(
-		"Getting user by ID",
-		"userID", userID,
-	)
-
-	query := `SELECT id, username, email FROM users WHERE id = $1`
+	query := "SELECT id, username, email FROM users WHERE id = $1"
 
 	var user entity.User
 
@@ -113,31 +93,48 @@ func (repository *userRepository) GetById(
 
 	if err != nil {
 		if errors.Is(err, sql.ErrNoRows) {
-			repository.logger.Warn(
-				"User not found",
-				"userID", userID,
-			)
-
+			repository.logger.Warn("user not found", "userID", userID)
 			return nil, domain.ErrNotFound
 		}
 
-		repository.logger.Error(
-			"Failed to get user by ID",
-			"userID", userID,
-			"error", err,
-		)
+		repository.logger.Error("failed to get user by ID", "userID", userID, "error", err)
 
-		return nil, fmt.Errorf(
-			"[user store] - [GetById] - err: [%w]",
-			err,
-		)
+		return nil, fmt.Errorf("[user repository] - [get by id] - err: [%w]", err)
 	}
 
-	repository.logger.Info(
-		"Successfully retrieved user",
-		"userID", user.ID,
-		"username", user.Username,
+	return &user, nil
+}
+
+func (repository *userRepository) GetUserByEmail(ctx context.Context, email string) (*entity.User, error) {
+
+	ctx, cancel := context.WithTimeout(ctx, config.QueryTimeoutDuration)
+	defer cancel()
+
+	query := "SELECT id, username, email, password, created_at FROM users WHERE email = $1"
+
+	var result entity.User
+
+	err := repository.db.QueryRowContext(
+		ctx,
+		query,
+		email,
+	).Scan(
+		&result.ID,
+		&result.Username,
+		&result.Email,
+		&result.Password,
+		&result.CreatedAt,
 	)
 
-	return &user, nil
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			repository.logger.Warn("user not found", "email", email)
+			return nil, domain.ErrNotFound
+		}
+
+		repository.logger.Error("Failed to get user by ID", "email", email, "error", err)
+		return nil, fmt.Errorf("[user repository] - [Login] - err: [%w]", err)
+	}
+
+	return &result, nil
 }
