# internal/interfaces/http/transport/request/user_request.go
@@ -1,0 +1,12 @@
+package request
+
+type UserCreationRequest struct {
+	Username string `json:"username"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type UserLoginRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
